# crosshair

./: LICENSE  README.md  hooks.json.sample  install.sh  pyproject.toml  requirements.txt
config/: default.json
crosshair/: __init__.py  __main__.py  analytics.py  cli.py  config.py  logs.py  state.py  util.py
crosshair/hooks/: __init__.py  after_file_edit.py  after_response.py  before_submit.py  post_tool.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py
crosshair/router/: __init__.py  classifier.py  messages.py
crosshair/rtk/: __init__.py  registry.py  rewrite.py  runner.py  tracking.py
crosshair/rtk/filters/: __init__.py  base.py  build.py  files.py  git.py  infra.py  tests.py
crosshair/safepoint/: __init__.py  detector.py  handoff.py  signals.py
tests/: conftest.py  test_classifier.py  test_handoff.py  test_hooks.py  test_install.py  test_rtk_cli.py  test_rtk_filters.py  test_rtk_hook.py  test_rtk_rewrite.py  test_safepoint.py  test_util.py
