[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crosshair-cursor"
version = "0.1.0"
description = "A lightweight control layer for Cursor that routes prompts to the cheapest-adequate model and detects conversation safepoints to reduce token usage."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "rohitjacob" }]
keywords = ["cursor", "hooks", "llm", "routing", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
crosshair = "crosshair.cli:main"
rtk = "crosshair.cli:rtk_main"

[project.urls]
Homepage = "https://github.com/rohitjacob/crosshair"

[tool.setuptools.packages.find]
where = ["."]
include = ["crosshair*"]

[tool.setuptools.package-data]
crosshair = ["../config/default.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
